[gd_scene load_steps=13 format=3 uid="uid://buf7x4yw7uj2f"]

[ext_resource type="Script" uid="uid://b7vfhouher3kw" path="res://Menu Scripts/settings_scene.gd" id="1_4s63o"]
[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="1_itmm8"]
[ext_resource type="Texture2D" uid="uid://r0x5i2s0vspc" path="res://Menu Assets/Selection Title.png" id="2_d372u"]
[ext_resource type="Texture2D" uid="uid://ce5cmnitbtulq" path="res://Menu Assets/black square.png" id="3_07spo"]
[ext_resource type="Material" uid="uid://b0nn87h7iqj6s" path="res://Menu Shaders/Menu_BG.tres" id="4_7m3wq"]
[ext_resource type="Texture2D" uid="uid://bqjrg3vh0aogr" path="res://Menu Assets/DarkMode.png" id="4_07spo"]
[ext_resource type="Texture2D" uid="uid://dvhx8s4guhrie" path="res://Menu Assets/LightMode.png" id="5_78oe7"]
[ext_resource type="Texture2D" uid="uid://efsmbuddjoaj" path="res://Menu Assets/Menu_BG.png" id="5_a671u"]
[ext_resource type="Texture2D" uid="uid://cu20dxg3osgae" path="res://Menu Assets/Sound.png" id="8_07spo"]
[ext_resource type="Texture2D" uid="uid://baxgt8gltobrw" path="res://Menu Assets/Back (1).png" id="9_53ro8"]
[ext_resource type="Texture2D" uid="uid://ckk2xnx0ahc05" path="res://Menu Assets/Sound_Mute.png" id="11_53ro8"]
[ext_resource type="AudioStream" uid="uid://dk57nyfbj42mm" path="res://Audio/select_sound.wav" id="11_a671u"]

[node name="Settings Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4s63o")

[node name="bg" type="TextureRect" parent="."]
material = ExtResource("1_itmm8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_07spo")

[node name="MenuBg" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.258824)
material = ExtResource("4_7m3wq")
layout_mode = 0
offset_left = -30.0
offset_top = -13.9999
offset_right = 2530.0
offset_bottom = 1426.0
scale = Vector2(0.759848, 0.759848)
texture = ExtResource("5_a671u")

[node name="SelectionTitle" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -431.0
offset_right = 431.0
offset_bottom = 192.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="SelectionTitle"]
material = ExtResource("1_itmm8")
layout_mode = 2
texture = ExtResource("2_d372u")

[node name="DarkMode Button" type="TextureButton" parent="."]
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 1016.0
offset_top = 385.0
offset_right = 2092.0
offset_bottom = 1029.0
scale = Vector2(0.639, 0.639)
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("5_78oe7")
texture_pressed = ExtResource("4_07spo")

[node name="Back" type="TouchScreenButton" parent="."]
material = ExtResource("1_itmm8")
position = Vector2(133, 45)
scale = Vector2(0.554455, 0.554455)
texture_normal = ExtResource("9_53ro8")

[node name="SoundToggle" type="TextureButton" parent="."]
material = ExtResource("1_itmm8")
layout_mode = 0
offset_left = 171.0
offset_top = 385.0
offset_right = 1247.0
offset_bottom = 1029.0
scale = Vector2(0.638759, 0.638759)
toggle_mode = true
texture_normal = ExtResource("8_07spo")
texture_pressed = ExtResource("11_53ro8")

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_a671u")

[connection signal="pressed" from="DarkMode Button" to="." method="_on_dark_mode_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SoundToggle" to="." method="_on_sound_toggle_pressed"]
